Fix filters spacing on Dashboards

--- a/client/app/assets/less/redash/query.less
+++ b/client/app/assets/less/redash/query.less
@@ -114,3 +114,11 @@ edit-in-place p.editable:hover {
   display: flex;
   flex-flow: column;
 }
+
+.widget-wrapper {
+  .body-container {
+    filters {
+      padding-left: 15px;
+    }
+  }
+}
